# rust-rem-bg-cpu

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  api.http
scripts/: download-model.sh
src/: main.rs
src/application/: constants.rs  image_processor.rs  inference.rs  inference_v2.rs  mod.rs  postprocessing.rs  postprocessing_v2.rs  preprocessing.rs  preprocessing_v2.rs
src/domain/: constants.rs  error.rs  mod.rs
src/infrastructure/: constants.rs  mod.rs  s3.rs  server.rs
src/presentation/: constants.rs  handlers.rs  mod.rs
